--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,37 @@
+body {
+    font-size: 15px;
+    color: #333;
+    font-weight: 500;
+    font-family: 'Ubuntu', sans-serif;
+    background-color: #ecf0f1;
+    letter-spacing: 1px;
+
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 3;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+h2, h4, h1 {
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: bold;
+}
+
+.slides-navigation {
+    z-index: 6;
+}
+
 .slides-navigation .prev,
 .slides-navigation .next {
     width: 47px;
     height: 47px;
     background-size: cover;
     background-repeat: no-repeat;
-    color: #d4d4d4;
+    color: #96a1a7;
     
 }
 
@@ -16,4 +43,44 @@
 .slides-navigation a.next {
     right: 20px;
     
+}
+
+.titleMessage {
+    position: absolute;
+    width: 100%;
+    height: 250px;
+    top: 50%;
+    z-index: 5;
+    text-align: center;
+    margin-top: -125px;
+
+}
+
+.titleMessage .heading p {
+    color: #fff;
+    text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
+    font-weight: 100;
+    letter-spacing: 7px;
+}
+
+.titleMessage .heading .main {
+    font-size: 50px;
+}
+
+.titleMessage .heading .sub {
+    font-size: 23px;
+}
+
+.section {
+    padding: 100px 0;
+}
+
+.aboutImage {
+    max-width: 100%;
+}
+
+.skillsSection {
+    background-color: #2c3e50;
+    color: #ecf0f1;
+    font-family: 'Ubuntu', sans-serif;
 }
